--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0",
     "csvtojson": "^2.0.10",
+    "ejs": "^3.1.9",
     "exceljs": "^4.3.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.4.0",
